--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,51 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--Bostr-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  
+
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,100&display=swap" rel="stylesheet">
+
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<!-- Copie-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+<link rel="stylesheet" href="style.css">
+
+<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
-<body>
+<body style="color: black;">
   <app-root></app-root>
+  
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+
+
+
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+		<script>
+			$(document).ready(function(){
+			    $('.slider').slick({infinite: true, arrows: false, speed: 300, autoplay: true, autoplaySpeed: 2000, slidesToShow: 4, slidesToScroll: 1,
+				  responsive: [{breakpoint: 1024,settings: {slidesToShow: 3,slidesToScroll: 1}},{breakpoint: 600,settings: {slidesToShow: 2,slidesToScroll: 1}},{breakpoint: 480,settings: {slidesToShow: 1,slidesToScroll: 1}}]
+				});
+			    $('.slider-3').slick({infinite: true, arrows: false, speed: 300, autoplay: true, autoplaySpeed: 2000, slidesToShow: 3, slidesToScroll: 1,
+				  responsive: [{breakpoint: 1024,settings: {slidesToShow: 2,slidesToScroll: 1}},{breakpoint: 600,settings: {slidesToShow: 2,slidesToScroll: 1}},{breakpoint: 480,settings: {slidesToShow: 1,slidesToScroll: 1}}]
+				});
+			});
+        </script>
 </body>
 </html>
